@@ -2,17 +2,19 @@ package com.sprint.mission.discodeit.repository.jcf;
 
 import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-@Repository("readStatusRepository")
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
+@Repository
 public class JCFReadStatusRepository implements ReadStatusRepository {
     private final Map<UUID, ReadStatus> data;
 
-    public JCFReadStatusRepository() { this.data = new HashMap<>(); }
-
+    public JCFReadStatusRepository() {
+        this.data = new HashMap<>();
+    }
 
     @Override
     public ReadStatus save(ReadStatus readStatus) {
@@ -26,29 +28,32 @@ public class JCFReadStatusRepository implements ReadStatusRepository {
     }
 
     @Override
-    public List<ReadStatus> findAllByChannelId(UUID channelId) {
-        return this.data.values().stream().filter(rs -> rs.getChannelId().equals(channelId)).collect(Collectors.toList());
-    }
-
-    @Override
     public List<ReadStatus> findAllByUserId(UUID userId) {
-        return this.data.values().stream().filter(rs -> rs.getUserId().equals(userId)).collect(Collectors.toList());
+        return this.data.values().stream()
+                .filter(readStatus -> readStatus.getUserId().equals(userId))
+                .toList();
     }
 
     @Override
-    public List<ReadStatus> findAll() {
-        return this.data.values().stream().toList();
+    public List<ReadStatus> findAllByChannelId(UUID channelId) {
+        return this.data.values().stream()
+                .filter(readStatus -> readStatus.getChannelId().equals(channelId))
+                .toList();
     }
 
     @Override
-    public void delete(UUID id) {
+    public boolean existsById(UUID id) {
+        return this.data.containsKey(id);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
         this.data.remove(id);
     }
 
     @Override
-    public void deleteByChannelId(UUID channelId) {
-        this.data.values().removeIf(rs -> rs.getChannelId().equals(channelId));
+    public void deleteAllByChannelId(UUID channelId) {
+        this.findAllByChannelId(channelId)
+                .forEach(readStatus -> this.deleteById(readStatus.getId()));
     }
-
-
 }
